made changed to the css for the store, products, and edit/add pages for the shop. changes were made to the min-height. also added a new product-top and blog-top class to relevant pages to ensure the body of the page appears below the header and not behind it

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,8 +6,10 @@ html {
 body {
     background: url('/media/black-gift.jpg') no-repeat center center fixed;
     background-size: cover;
+    position: absolute;
     font-family: 'Lato';
 }
+
 
 /* from Bulma */
 .icon {
@@ -516,3 +518,20 @@ input[name='q']::placeholder {
         height: calc(100vh -44px);
 }
 }
+.product-top, .blog-top{
+    margin-top: 280px;
+    width: 100vw;
+}
+.blog-width{
+    width: 100vw;
+    
+}
+
+footer{
+        position:fixed;
+        bottom:0;
+        width:100%;
+        height:40px;   /* Height of the footer */
+        background:#000;
+        color:#fff;
+     }
